--- a/compose.yaml
+++ b/compose.yaml
@@ -3,8 +3,6 @@ services:
       build: 
         context: ./docker/php
       container_name: php-container
-      ports:
-          - "9000:9000"
       volumes:
           - .:/var/www/project
       restart: always
@@ -15,12 +13,15 @@ services:
       volumes:
         - .:/var/www/project
       ports:
-        - "8080:80"
+        - ${EXPOSED_PORT}:80
       depends_on:
         - php
-        - db
 
   db:
     build:
       context: ./docker/postgresql
     container_name: db-container
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
