--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,23 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+app_get_all_summer_houses: 
+  path: /house 
+  controller: App\Controller\SummerHouseController::get_all
+  methods: [GET]
+  
+app_create_request: 
+  path: /request
+  controller: App\Controller\RequestController::create_request 
+  methods: [POST]
+
+app_fully_change_request: 
+  path: /request
+  controller: App\Controller\RequestController::change_request
+  methods: [PUT]
+
+app_change_request_commit: 
+  path: /request
+  controller: App\Controller\RequestController::change_request_comment
+  methods: [PATCH]
