--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,17 +4,30 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.project_dir: '%kernel.project_dir%'
+    app.requests_csv_relative_path: '%kernel.project_dir%/assets/csv/Requests.csv'
+    app.summer_house_csv_relative_path: '%kernel.project_dir%/assets/csv/SummerHouses.csv'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+    App\Repository\CsvRequestRepository: 
+        arguments:
+            $filepath: "%app.requests_csv_relative_path%"
+          
+    App\Repository\CsvSummerHouseRepository: 
+        arguments: 
+            $filepath: "%app.summer_house_csv_relative_path%"
+    
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+        exclude: 
+          - '../src/Repository/'
+
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
